--- a/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
@@ -47,6 +47,11 @@
 			</div>
 			<div class="row mb-3" align="center">
 				<div class="col-12">
+					<h:commandLink action="#{formaPagamentoController.prepararConsulta}" value="Forma de pagamento" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
+				</div>
+			</div>
+			<div class="row mb-3" align="center">
+				<div class="col-12">
 					<h:commandLink action="#{menuController.acessarMenuInicial}" value="Tela Inicial" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
 				</div>
 			</div>
