--- a/src/main/webapp/ecommerce/paginas/cadastros/consultarCondicaoPagamento.xhtml
+++ b/src/main/webapp/ecommerce/paginas/cadastros/consultarCondicaoPagamento.xhtml
@@ -65,7 +65,7 @@
 							<button type="button" class="btn btn-danger" value="" onclick="return excluir('condicaoPagamento#{s.codigo}')">
 								<span class="fas fa-trash-alt"></span>
 							</button>
-							<h:commandLink action="#{condicaoPagamentoController.excluir(s.codigo)}" class="condicao#{s.codigo}"></h:commandLink>
+							<h:commandLink action="#{condicaoPagamentoController.excluir(s.codigo)}" class="condicaoPagamento#{s.codigo}"></h:commandLink>
 						</h:column>
 					</h:dataTable>
 				</div>
