--- a/src/main/webapp/ecommerce/paginas/cadastros/cadastrarCondicaoPagamento.xhtml
+++ b/src/main/webapp/ecommerce/paginas/cadastros/cadastrarCondicaoPagamento.xhtml
@@ -39,14 +39,19 @@
 					</div>
 				</div>
 			</div>
-			<div class="row mb-3 ml-5 pl-4">
-				<div class="col-6 offset-2">
+
+			<div class="row ml-5 pl-4">
+				<div class="col-12 offset-2">
 					<label>Descrição</label>
+				</div>
+			</div>
+			<div class="row mb-3 ml-5 pl-4 ">
+				<div class="col offset-2">
 					<div class="input-group">
 						<div class="input-group-append">
 							<h:inputText
 								value="#{condicaoPagamentoController.condicaoPagamentoDto.descricao}"
-								class="form-control" id="txtDescricao" autocomplete="off"
+								class="form-control col-12" id="txtDescricao" autocomplete="off"
 								readonly="true">
 							</h:inputText>
 							<h:commandLink class="btn btn-primary ml-2 rounded"
