--- a/src/main/webapp/ecommerce/paginas/uteis/menuprocesso.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/menuprocesso.xhtml
@@ -40,7 +40,7 @@
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Venda</button>
 						<div class="dropdown-menu">
 							<h:commandButton
-								action="#{ajusteEstoqueController.prepararAjusteEstoque}"
+								action="#{vendaController.abrirVenda}"
 								value="Cadastrar venda" immediate="true"
 								styleClass="dropdown-item"></h:commandButton>
 							<h:commandButton
