--- a/src/main/webapp/ecommerce/paginas/cadastros/consultarCliente.xhtml
+++ b/src/main/webapp/ecommerce/paginas/cadastros/consultarCliente.xhtml
@@ -10,7 +10,7 @@
 	<h:form id="form">
 		<div class="container bg-light rounded-bottom divcentral">
 			<ui:include src="/ecommerce/paginas/uteis/barramenu.xhtml" />
-			<h1 align="center">Consulta de Cidade</h1>
+			<h1 align="center">Consulta de Cliente</h1>
 			<br />
 			<div class="row mb-3">
 				<div class="col-3">
