--- a/src/main/webapp/ecommerce/paginas/processos/itensVenda.xhtml
+++ b/src/main/webapp/ecommerce/paginas/processos/itensVenda.xhtml
@@ -9,6 +9,16 @@
 	<title>Ecommerce</title>
 	<ui:include src="/ecommerce/paginas/uteis/scripts.xhtml" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<script>
+		function enter(nextfield) {
+			if (window.event && window.event.keyCode == 13) {
+				nextfield.focus();
+				return false;
+			} else {
+				return true;
+			}
+		}
+	</script>
 </h:head>
 <h:body class="bg-info">
 	<h:form>
@@ -25,193 +35,187 @@
 			</div>
 
 			<div class="row mb-3 ml-5 pl-4">
-				<label class="col-12 offset-2">Cliente</label>
-				<div class="form-inline offset-2">
-					<div class="form-group ml-3">
-						<h:inputText value="#{vendaController.vendaDto.idCliente}"
-							class="form-control col-2" id="txtIdCliente" autocomplete="off"
-							required="true">
-							<f:ajax listener="#{ajusteEstoqueController.carregarProduto}"
-								execute="txtIdCliente" render="txtIdCliente txtNomeCliente"></f:ajax>
-						</h:inputText>
-						<label>&#160;</label>
-						<h:inputText value="#{vendaController.vendaDto.nomeCliente}"
-							class="form-control col-8" id="txtNomeCliente" autocomplete="off"
-							required="true" disabled="true"></h:inputText>
-						<label>&#160;</label>
-						<button type="button" class="btn btn-primary" data-toggle="modal"
-							data-target="#pesquisarModalCliente" id="botaoProcurar">
-							<span class="fas fa-search"></span>
-						</button>
-						<h:message for="txtIdCliente" showDetail="false"
-							showSummary="true" styleClass="error" />
-					</div>
+				<div class="col-5 offset-1">
+					<label>Cliente</label>
+					<h:inputText
+						value="#{itemVendaController.vendaController.vendaDto.nomeCliente}"
+						class="form-control" id="txtNomeCliente" autocomplete="off"
+						disabled="true"></h:inputText>
 				</div>
-
-			</div>
-
-			<div class="row mb-3 ml-5 pl-4">
-				<label class="col-12 offset-2">Funcionário</label>
-				<div class="form-inline offset-2">
-					<div class="form-group ml-3">
-						<h:inputText value="#{vendaController.vendaDto.idFuncionario}"
-							class="form-control col-2" id="txtIdFuncionario"
-							autocomplete="off" required="true">
-							<f:ajax listener="#{ajusteEstoqueController.carregarProduto}"
-								execute="txtIdFuncionario"
-								render="txtIdFuncionario txtNomeFuncionario"></f:ajax>
-						</h:inputText>
-						<label>&#160;</label>
-						<h:inputText value="#{vendaController.vendaDto.nomeFuncionario}"
-							class="form-control col-8" id="txtNomeFuncionario"
-							autocomplete="off" required="true" disabled="true"></h:inputText>
-						<label>&#160;</label>
-						<button type="button" class="btn btn-primary" data-toggle="modal"
-							data-target="#pesquisarModalFuncionario" id="botaoProcurar">
-							<span class="fas fa-search"></span>
-						</button>
-						<h:message for="txtIdFuncionario" showDetail="false"
-							showSummary="true" styleClass="error" />
-					</div>
-				</div>
-
-			</div>
-
-
-
-			<div class="row mb-3 ml-5 pl-4">
-				<div class="col-3 offset-2">
-					<label>Data</label>
-					<h:inputText value="#vendaController.vendaDto.dataVenda}"
-						class="form-control" id="txtData" autocomplete="off"
-						required="true" converter="converterDataOutput">
+				<div class="col-4">
+					<label>Data venda</label>
+					<h:inputText
+						value="#{itemVendaController.vendaController.vendaDto.dataVenda}"
+						class="form-control" id="txtDataVenda" autocomplete="off"
+						disable="true" converter="converterDataOutput">
 					</h:inputText>
-					<h:message for="txtData" showDetail="false" showSummary="true"
-						styleClass="error" />
+				</div>
+
+			</div>
+
+			<div class="row mb-3 ml-5 pl-4">
+				<div class="col-5 offset-1">
+					<label>Funcionário</label>
+					<h:inputText
+						value="#{itemVendaController.vendaController.vendaDto.nomeFuncionario}"
+						class="form-control" id="txtNomeFuncionario" autocomplete="off"
+						readonly="readonly"></h:inputText>
+				</div>
+				<div class="col-4">
+					<label>Limite Crédito</label>
+					<h:inputText
+						value="#{itemVendaController.vendaController.vendaDto.limiteCredito}"
+						class="form-control" id="txtLimiteCredito" autocomplete="off"
+						required="true" converter="bigDecimalToCurrency">
+					</h:inputText>
+				</div>
+			</div>
+
+			<div class="row mb-3 ml-5 pl-4">
+				<div class="form-group">
+					<div class="col-5 offset-1">
+						<label>Produto</label>
+						<h:inputText
+							value="#{itemVendaController.itemVendaDto.nomeProduto}"
+							class="form-control" id="txtProduto" autocomplete="off"
+							readonly="readonly"></h:inputText>
+						<label>&#160;</label>
+						<button type="button" class="btn btn-primary" data-toggle="modal"
+							data-target="#pesquisarModalProduto" id="botaoProcurarProduto">
+							<span class="fas fa-search"></span>
+						</button>
+					</div>
+					<label>&#160;</label>
+					
+					
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12">
+					<h:dataTable id="table" border="0"
+						value="#{itemVendaController.listItemsVenda}" var="s"
+						class="table table-hover"
+						columnClasses="center, left, colunaEditar, colunaExcluir">
+						<h:column id="column1">
+							<f:facet name="header">
+								<h:outputText value="Produto"></h:outputText>
+							</f:facet>
+							<h:outputText value="#{s.nomeProduto}"></h:outputText>
+						</h:column>
+						<h:column id="column2">
+							<f:facet name="header">
+								<h:outputText value="Quantidade"></h:outputText>
+							</f:facet>
+							<h:outputText value="#{s.quantidade}"></h:outputText>
+						</h:column>
+						<h:column id="column3">
+							<f:facet name="header">
+								<h:outputText value="Preço unitário"></h:outputText>
+							</f:facet>
+							<h:commandLink action="#{s.valorUnitario}"
+								class="btn btn-success">
+								<span class="fas fa-pen"></span>
+							</h:commandLink>
+						</h:column>
+						<h:column id="column4">
+							<f:facet name="header">
+								<h:outputText value="Valor total"></h:outputText>
+							</f:facet>
+							<h:commandLink action="#{s.totalUnitario}"
+								class="btn btn-success">
+								<span class="fas fa-pen"></span>
+							</h:commandLink>
+						</h:column>
+						<h:column id="column5">
+							<f:facet name="header">
+								<h:outputText value="Excluir"></h:outputText>
+							</f:facet>
+							<button type="button" class="btn btn-danger" value=""
+								onclick="return excluir('itemVenda#{s.codigo}')">
+								<span class="fas fa-trash-alt"></span>
+							</button>
+							<h:commandLink
+								action="#{itemVendaController.excluirItemVenda(s)}"
+								class="itemVenda#{s.codigo}"></h:commandLink>
+						</h:column>
+					</h:dataTable>
 				</div>
 			</div>
 
 			<div class="row mb-2 ml-5 pl-3">
 				<div class="col-6 offset-3" align="right">
-					<h:commandButton action="#{vendaController.cancelarOperacao}"
+					<h:commandButton action="#{itemVendaController.cancelar}"
 						value="Cancelar" immediate="true" class="btn btn-primary"
 						style="width: 120px; margin: 5px"></h:commandButton>
-					<h:commandButton
-						action="#{ajusteEstoqueController.chamarItensVenda}"
+					<h:commandButton action="#{itemVendaController.chamarRecebimento}"
 						value="Próximo" class="btn btn-primary"
 						style="width: 120px; margin: 5px"
 						onclick="return validarSubmit();"></h:commandButton>
 				</div>
 			</div>
+			
+			<div class="modal" id="pesquisarModalProduto">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-body">
+							<h4>Pesquisa de Produto</h4>
+							<div class="input-group-append">
+								<h:inputText value="#{itemVendaController.argumentoBusca}"
+									class="form-control" id="nomeCidadePesquisa" autocomplete="off"
+									style="width: 100%">
+								</h:inputText>
+								<h:commandLink class="btn btn-primary" type="button"
+									action="#{itemVendaController.pesquisarProduto}">
+									<span class="fas fa-search"></span>
+									<f:ajax execute="nomeCidadePesquisa" render="tabela"></f:ajax>
+								</h:commandLink>
+							</div>
+							<br /> <br />
+							<h:dataTable border="0"
+								value="#{ajusteEstoqueController.listaProdutoDto}" var="t"
+								class="table table-hover"
+								columnClasses="center, left, colunaAceitar" id="tabela">
+								<h:column id="column1">
+									<f:facet name="header">
+										<h:outputText value="ID"></h:outputText>
+									</f:facet>
+									<h:outputText value="#{t.codigo}"></h:outputText>
+								</h:column>
+								<h:column id="column2">
+									<f:facet name="header">
+										<h:outputText value="Nome"></h:outputText>
+									</f:facet>
+									<h:outputText value="#{t.descricao}"></h:outputText>
+								</h:column>
+								<h:column id="column2">
+									<f:facet name="header">
+										<h:outputText value="Preço venda"></h:outputText>
+									</f:facet>
+									<h:outputText value="#{t.valorProduto}" converter="bigDecimalToCurrency"></h:outputText>
+								</h:column>
+								<h:column id="column4">
+									<f:facet name="header">
+										<h:outputText value="Selecionar"></h:outputText>
+									</f:facet>
+									<h:commandLink
+										action="#{ajusteEstoqueController.selecionarProduto(t)}"
+										class="btn btn-success" pt:data-dismiss="modal">
+										<span class="fas fa-check"></span>
+										<f:ajax render="@form:txtIdProduto @form:txtNomeProduto"></f:ajax>
+									</h:commandLink>
+								</h:column>
+							</h:dataTable>
+							<br />
+							<div align="right">
+								<button type="button" class="btn btn-danger"
+									data-dismiss="modal" style="width: 120px">Sair</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
-			<div class="modal" id="pesquisarModalCliente">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-body">
-							<h4>Pesquisa de Cliente</h4>
-							<div class="input-group-append">
-								<h:inputText value="#{vendaController.argumentoBusca}"
-									class="form-control" id="nomeClientePesquisa" autocomplete="off"
-									style="width: 100%">
-								</h:inputText>
-								<h:commandLink class="btn btn-primary" type="button"
-									action="#{ajusteEstoqueController.pesquisarCliente}">
-									<span class="fas fa-search"></span>
-									<f:ajax execute="nomeClientePesquisa" render="tabelaCliente"></f:ajax>
-								</h:commandLink>
-							</div>
-							<br /> <br />
-							<h:dataTable border="0"
-								value="#{vendaController.listaClienteDto}" var="t"
-								class="table table-hover"
-								columnClasses="center, left, colunaAceitar" id="tabelaCliente">
-								<h:column id="column1">
-									<f:facet name="header">
-										<h:outputText value="ID"></h:outputText>
-									</f:facet>
-									<h:outputText value="#{t.codigo}"></h:outputText>
-								</h:column>
-								<h:column id="column2">
-									<f:facet name="header">
-										<h:outputText value="Nome"></h:outputText>
-									</f:facet>
-									<h:outputText value="#{t.nome}"></h:outputText>
-								</h:column>
-								<h:column id="column=3">
-									<f:facet name="header">
-										<h:outputText value="Selecionar"></h:outputText>
-									</f:facet>
-									<h:commandLink
-										action="#{vendaController.selecionarCliente(t)}"
-										class="btn btn-success" pt:data-dismiss="modal">
-										<span class="fas fa-check"></span>
-										<f:ajax render="@form:txtIdCliente @form:txtNomeCliente"></f:ajax>
-									</h:commandLink>
-								</h:column>
-							</h:dataTable>
-							<br />
-							<div align="right">
-								<button type="button" class="btn btn-danger"
-									data-dismiss="modal" style="width: 120px">Sair</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="modal" id="pesquisarModalFuncionario">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-body">
-							<h4>Pesquisa de Funcionário</h4>
-							<div class="input-group-append">
-								<h:inputText  value="#{vendaController.argumentoBusca}"
-									class="form-control" id="nomeFuncionarioPesquisa" autocomplete="off"
-									style="width: 100%">
-								</h:inputText>
-								<h:commandLink class="btn btn-primary" type="button"
-									action="#{vendaController.pesquisarFuncionario}">
-									<span class="fas fa-search"></span>
-									<f:ajax execute="nomeFuncionarioPesquisa" render="tabelaFuncionario"></f:ajax>
-								</h:commandLink>
-							</div>
-							<br /> <br />
-							<h:dataTable border="0"
-								value="#{vendaController.listaFuncionarioDto}" var="t"
-								class="table table-hover"
-								columnClasses="center, left, colunaAceitar" id="tabelaFuncionario">
-								<h:column id="column1">
-									<f:facet name="header">
-										<h:outputText value="ID"></h:outputText>
-									</f:facet>
-									<h:outputText value="#{t.codigo}"></h:outputText>
-								</h:column>
-								<h:column id="column2">
-									<f:facet name="header">
-										<h:outputText value="Nome"></h:outputText>
-									</f:facet>
-									<h:outputText value="#{t.nome}"></h:outputText>
-								</h:column>
-								<h:column id="column3">
-									<f:facet name="header">
-										<h:outputText value="Selecionar"></h:outputText>
-									</f:facet>
-									<h:commandLink
-										action="#{vendaController.selecionarFuncionario(t)}"
-										class="btn btn-success" pt:data-dismiss="modal">
-										<span class="fas fa-check"></span>
-										<f:ajax render="@form:txtIdFuncionario @form:txtNomeFuncionario"></f:ajax>
-									</h:commandLink>
-								</h:column>
-							</h:dataTable>
-							<br />
-							<div align="right">
-								<button type="button" class="btn btn-danger"
-									data-dismiss="modal" style="width: 120px">Sair</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
 
 
 			<br></br>
