--- a/src/main/webapp/ecommerce/paginas/processos/itensVenda.xhtml
+++ b/src/main/webapp/ecommerce/paginas/processos/itensVenda.xhtml
@@ -60,8 +60,8 @@
 							value="#{itemVendaController.itemVendaDto.nomeProduto}"
 							class="form-control" id="txtProduto" autocomplete="off"
 							disabled="true"></h:inputText>
-						<h:message for="@form:txtProduto" id="msgProduto" showSummary="true"
-							infoClass="text-info mensagemInfo"
+						<h:message for="@form:txtProduto" id="msgProduto"
+							showSummary="true" infoClass="text-info mensagemInfo"
 							warnClass="text-warning mensagemWarning"
 							errorClass="text-dark mensagemError" layout="list" />
 						<label>&#160;</label>
@@ -89,7 +89,7 @@
 						<h:commandLink class="btn btn-primary" id="teste">
 							<span class="fas fa-plus"></span>
 							<f:ajax listener="#{itemVendaController.adicionarItemVenda}"
-								render="@all" onevent="verificarNotificacao"></f:ajax>
+								execute="@form" render="@all" onevent="verificarNotificacao"></f:ajax>
 						</h:commandLink>
 					</div>
 				</div>
@@ -144,8 +144,9 @@
 				</div>
 			</div>
 			<br></br>
-			<div class="row mb-2 ml-5 pl-3">
-				<div class="col-4 offset-3" align="center">
+			<div class="row mb-2" >
+
+				<div class="col-3 offset-4" align="center">
 					<label>Total Venda</label>
 					<h:inputText
 						value="#{itemVendaController.vendaController.vendaDto.totalVenda}"
@@ -153,6 +154,7 @@
 						autocomplete="off" readonly="true"
 						converter="bigDecimalToCurrency"></h:inputText>
 				</div>
+				
 			</div>
 
 			<div class="row mb-2 ml-5 pl-3">
